monitoring/crowdsec/agent.yaml
apiVersion: v1
kind: Service
metadata:
  name: crowdsec-agent-service
  labels:
    app: crowdsec-agent-service
spec:
  type: ClusterIP
  ports:
    - port: 6060
      targetPort: 6060
      protocol: TCP
      name: metrics
  selector:
    k8s-app: crowdsec
    type: agent
    version: v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crowdsec-agent
  labels:
    k8s-app: crowdsec
    type: agent
    version: v1
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      k8s-app: crowdsec
      type: agent
  template:
    metadata:
      annotations:
        checksum/agent-configmap: 524e841fd2661b639b1cc3aee213e22b04572ed44b8d8c81289d7e16b76bab8c
        checksum/acquis-configmap: 680145cad122e58eaad5d9aa96581ffc35a6d7d83f55a62b9286f054d16754fa
      labels:
        k8s-app: crowdsec
        type: agent
        version: v1
    spec:
      containers:
        - name: crowdsec-agent
          image: "crowdsecurity/crowdsec:v1.7.0"
          imagePullPolicy: IfNotPresent
          command:
            [
              "sh",
              "-c",
              "cp /tmp_config/local_api_credentials.yaml /staging/etc/crowdsec/local_api_credentials.yaml && mv -n /staging/etc/crowdsec/* /etc/crowdsec_data/ && rm -rf /staging/etc/crowdsec && ln -s /etc/crowdsec_data /etc/crowdsec && ./docker_start.sh",
            ]
          resources:
            limits:
              cpu: 500m
              memory: 250Mi
            requests:
              cpu: 500m
              memory: 250Mi
          ports:
            - name: metrics
              containerPort: 6060
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /metrics
              port: metrics
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /metrics
              port: metrics
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5

          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /metrics
              port: metrics
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5

          securityContext:
            allowPrivilegeEscalation: false
            privileged: false

          volumeMounts:
            - name: crowdsec-config
              mountPath: /tmp_config
            - name: crowdsec-agent-config
              mountPath: /etc/crowdsec_data
            - name: acquis-config-volume
              mountPath: /etc/crowdsec_data/acquis.yaml
              subPath: acquis.yaml
            - name: varlog
              mountPath: /var/log
              readOnly: true
      terminationGracePeriodSeconds: 30
      volumes:
        - name: crowdsec-config
          emptyDir: {}
        - name: acquis-config-volume
          configMap:
            name: acquis-configmap
        - name: varlog
          hostPath:
            path: /var/log
        - name: crowdsec-agent-config
          persistentVolumeClaim:
            claimName: crowdsec-agent-config-pvc
---
apiVersion: v1
kind: Pod
metadata:
  name: "crowdsec-test-agent"
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
spec:
  containers:
    - name: "crowdsec-test-agent"
      image: curlimages/curl
      command:
        - /bin/sh
        - -ec
        - |
          curl -XGET http://crowdsec-agent-service:6060/metrics
  restartPolicy: Never
