monitoring/crowdsec/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: crowdsec-lapi
  namespace: crowdsec
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "crowdsec.int.kyledev.co"
    - "crowdsec.ts.kyledev.co"
  rules:
    - backendRefs:
        - name: crowdsec-service
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: crowdsec-appsec
  namespace: crowdsec
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "appsec.int.kyledev.co"
    - "appsec.ts.kyledev.co"
  rules:
    - backendRefs:
        - name: crowdsec-appsec-service
          port: 7422
