monitoring/crowdsec/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crowdsec
  namespace: crowdsec
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: crowdsec.int.kyledev.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crowdsec-service
                port:
                  number: 3000
  tls:
    - hosts:
        - crowdsec.int.kyledev.co
      secretName: crowdsec-kyledev-tls-prod
